# service_notification

./: .coveragerc  .dockerignore  .env.schema  .gitlab-ci.yml  .gitmodules  Dockerfile  Jenkinsfile  README.md  alembic.ini  app.py  config.py  docker-compose.yml  gitlab-ci.yml  gunicorn_config.py  gunicorn_starter.sh  namespace.py  pyproject.toml  requirements.txt  run.py  utils.py
.pytest_cache/v/cache/: nodeids
app/: __init__.py  api_registry.py  config.py  main.py
app/models/: base_models.py  models_announcement.py  models_email.py  models_notification.py  models_unsub.py  sql_announcement.py  sql_notification.py
app/routers/v1/: router_utils.py
emails/auth/: reset_password.html  reset_username.html
emails/contact_us/: confirm_email.html  support_email.html
emails/copy_request/: complete_request.html  new_request.html
emails/invitation/: ad_existing_invite_project.html  ad_existing_invite_without_project.html  ad_invite_project.html  ad_invite_without_project.html  project.html  without_project.html
emails/resource_request/: approved.html  request.html
emails/role/: update.html
emails/test_account/: contract_user_create.html  review_notification.html  support_notification.html  user_created.html
emails/user_actions/: disable.html  enable.html  invite.html  restore.html
kubernetes/: deployment.yaml
local_config/pgadmin/: pgadmin4.db
migrations/: README  env.py  script.py.mako
migrations/scripts/: create_notifications_db.sql
migrations/versions/: 19c5300a4b2f_adding_announcement_table.py  49fbb2de7523_add_announcements_table.py  acfc65939c91_add_unsubscribed_notification_table.py  e6fcf3ec5303_add_created_date_to_system_maintenance.py  f7b7903f78c4_add_system_maintenance_table.py
service_email/: __init__.py  ops_email.py
services/service_logger/: README.md  formatter.py  logger_factory_service.py
tests/: logger.py  pytest.ini  test_announcement.py  test_notification.py  test_ops_email.py  test_requirements.txt
(+6 files in other folders)
